# ath

./: !~ATH spec.md  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  athSpec.md  cwnd_log.csv
athapps/: jsonParser.~ath
athapps/brainfuck/: brainfuck.~ath
athapps/golf/: bbcode.~ath  brainfuck.~ath  quine.~ATH  quine.~ath
athapps/golf/bbcode/: bbcode-ungolfed.~ATH  bbcode.~ath
athapps/quicproject/: congestion.~ATH  main.~ATH  network.~ATH  packets.~ATH  streams.~ATH  test_import.~ATH  test_small.~ATH  test_timing.~ATH  util.~ATH
athapps/quicproject/demos/: cwnd_log.csv  demo_heavy_loss.~ATH  demo_moderate_loss.~ATH  demo_no_loss.~ATH  demo_tail_loss.~ATH  plot_cwnd.py
interpreter/: README.md  pyproject.toml  run_tests.py  untildeath.py
interpreter/examples/: entity_combinations.~ath  fizzbuzz.~ath  hello.~ath  inputdemo.~ath  not_entity.~ath
interpreter/tests/: test_builtins.py  test_edge_cases.py  test_interpreter.py
interpreter/untildeath/: __init__.py  ast_nodes.py  builtins.py  entities.py  errors.py  interpreter.py  lexer.py
js-interpreter/: ath.js  package.json
js-interpreter/src/: ast.js  builtins.js  debugger.js  entities.js  errors.js  index.js  interpreter.js  lexer.js  parser.js  scope.js  tokens.js
js-interpreter/test/: builtins.test.js  edge-cases.test.js  interpreter.test.js  lexer.test.js  parser.test.js
python-interpreter/: README.md  cwnd_log.csv  pyproject.toml  test.~ath  untildeath.py
python-interpreter/examples/: bitwise_ops.~ath  buggy_loop.~ATH  concurrent.~ath  countdown.~ATH  error_handling.~ATH  fizzbuzz.~ATH  fizzbuzz.~ath  inputdemo.~ATH  mathlib.~ATH  mathlib.~ath  module_demo.~ATH  module_demo.~ath  quine.~ATH  variables.~ATH
python-interpreter/tests/: __init__.py  test_builtins.py  test_interpreter.py  test_lexer.py  test_module_import.py  test_parser.py
python-interpreter/untildeath/: __main__.py  builtins.py  debugger.py  entities.py  errors.py  interpreter.py  lexer.py  parser.py  tui.py
webpage/: index.html  tildeath.js
