[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "untildeath"
version = "1.0.0"
description = "!~ATH (Until Death) - An esoteric programming language interpreter"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["esoteric", "programming-language", "interpreter", "ath"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
untildeath = "untildeath.__main__:main"

[tool.setuptools.packages.find]
include = ["untildeath*"]
